crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__ternary-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"true then 1 + 2 else 2 + 1\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Ternary(
                            (
                                Boolean(
                                    (
                                        true,
                                        0..4,
                                    ),
                                ),
                                0..4,
                            ),
                            (
                                "then",
                                5..9,
                            ),
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                10..11,
                                            ),
                                        ),
                                        10..11,
                                    ),
                                    (
                                        Number(
                                            (
                                                2.0,
                                                14..15,
                                            ),
                                        ),
                                        14..15,
                                    ),
                                ),
                                10..15,
                            ),
                            (
                                "else",
                                16..20,
                            ),
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                2.0,
                                                21..22,
                                            ),
                                        ),
                                        21..22,
                                    ),
                                    (
                                        Number(
                                            (
                                                1.0,
                                                25..26,
                                            ),
                                        ),
                                        25..26,
                                    ),
                                ),
                                21..26,
                            ),
                        ),
                        0..26,
                    ),
                ),
                0..26,
            ),
        ),
        0..26,
    ),
]
