crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__ternary-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"true then 1 + 2 else false then 5 else 6\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Ternary(
                            (
                                Boolean(
                                    (
                                        true,
                                        0..4,
                                    ),
                                ),
                                0..4,
                            ),
                            (
                                "then",
                                5..9,
                            ),
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                10..11,
                                            ),
                                        ),
                                        10..11,
                                    ),
                                    (
                                        Number(
                                            (
                                                2.0,
                                                14..15,
                                            ),
                                        ),
                                        14..15,
                                    ),
                                ),
                                10..15,
                            ),
                            (
                                "else",
                                16..20,
                            ),
                            (
                                Ternary(
                                    (
                                        Boolean(
                                            (
                                                false,
                                                21..26,
                                            ),
                                        ),
                                        21..26,
                                    ),
                                    (
                                        "then",
                                        27..31,
                                    ),
                                    (
                                        Number(
                                            (
                                                5.0,
                                                32..33,
                                            ),
                                        ),
                                        32..33,
                                    ),
                                    (
                                        "else",
                                        34..38,
                                    ),
                                    (
                                        Number(
                                            (
                                                6.0,
                                                39..40,
                                            ),
                                        ),
                                        39..40,
                                    ),
                                ),
                                21..40,
                            ),
                        ),
                        0..40,
                    ),
                ),
                0..40,
            ),
        ),
        0..40,
    ),
]
