crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__ternary-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"true then\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Ternary(
                                    (
                                        Boolean(
                                            (
                                                true,
                                                0..4,
                                            ),
                                        ),
                                        0..4,
                                    ),
                                    (
                                        "then",
                                        5..9,
                                    ),
                                    (
                                        Error,
                                        9..9,
                                    ),
                                    (
                                        "",
                                        9..9,
                                    ),
                                    (
                                        Error,
                                        9..9,
                                    ),
                                ),
                                0..9,
                            ),
                        ),
                        0..9,
                    ),
                ),
                0..9,
            ),
        ],
    ),
    [
        found end of input at 9..9 expected expression,
        found end of input at 9..9 expected something else, or '"else"',
        found end of input at 9..9 expected something else, or expression,
    ],
)
