crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__ternary.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"   true then 1 else 2   \"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Ternary(
                            (
                                Boolean(
                                    (
                                        true,
                                        3..7,
                                    ),
                                ),
                                3..7,
                            ),
                            (
                                "then",
                                8..12,
                            ),
                            (
                                Number(
                                    (
                                        1.0,
                                        13..14,
                                    ),
                                ),
                                13..14,
                            ),
                            (
                                "else",
                                15..19,
                            ),
                            (
                                Number(
                                    (
                                        2.0,
                                        20..21,
                                    ),
                                ),
                                20..21,
                            ),
                        ),
                        3..21,
                    ),
                ),
                3..21,
            ),
        ),
        3..21,
    ),
]
