crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__text-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"\\\"Hello, {name}!\\\"\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Text(
                            [
                                (
                                    Text(
                                        (
                                            "Hello, ",
                                            1..8,
                                        ),
                                    ),
                                    1..8,
                                ),
                                (
                                    Expression(
                                        (
                                            Var(
                                                (
                                                    "name",
                                                    9..13,
                                                ),
                                            ),
                                            9..13,
                                        ),
                                    ),
                                    8..14,
                                ),
                                (
                                    Text(
                                        (
                                            "!",
                                            14..15,
                                        ),
                                    ),
                                    14..15,
                                ),
                            ],
                        ),
                        0..16,
                    ),
                ),
                0..16,
            ),
        ),
        0..16,
    ),
]
