crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__text-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(r#\"\"\\\"text in quotes\\\" \\\\\"\"#))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Text(
                            [
                                (
                                    Text(
                                        (
                                            "\\\"",
                                            1..3,
                                        ),
                                    ),
                                    1..3,
                                ),
                                (
                                    Text(
                                        (
                                            "text in quotes",
                                            3..17,
                                        ),
                                    ),
                                    3..17,
                                ),
                                (
                                    Text(
                                        (
                                            "\\\"",
                                            17..19,
                                        ),
                                    ),
                                    17..19,
                                ),
                                (
                                    Text(
                                        (
                                            " ",
                                            19..20,
                                        ),
                                    ),
                                    19..20,
                                ),
                                (
                                    Text(
                                        (
                                            "\\\\",
                                            20..22,
                                        ),
                                    ),
                                    20..22,
                                ),
                            ],
                        ),
                        0..23,
                    ),
                ),
                0..23,
            ),
        ),
        0..23,
    ),
]
