crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__text-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(r#\"\"{unclosed\"\"#))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Text(
                                    [
                                        (
                                            Expression(
                                                (
                                                    Var(
                                                        (
                                                            "unclosed",
                                                            2..10,
                                                        ),
                                                    ),
                                                    2..10,
                                                ),
                                            ),
                                            1..10,
                                        ),
                                    ],
                                ),
                                0..11,
                            ),
                        ),
                        0..11,
                    ),
                ),
                0..11,
            ),
        ],
    ),
    [
        found '"\""' at 10..11 expected '"("', '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', or '"}"',
    ],
)
