crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__text-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(r#\"\"\"#))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Text(
                                    [],
                                ),
                                0..1,
                            ),
                        ),
                        0..1,
                    ),
                ),
                0..1,
            ),
        ],
    ),
    [
        found end of input at 1..1 expected any, '"\\"', '"{"', or '"\""',
    ],
)
